[tool.poetry]
name = "evolution"
version = "0.1.0"
description = ""
authors = ["Richard Westberg <westberg.richard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
adafruit-circuitpython-max31865 = "^2.2.5"
"RPi.GPIO" = "^0.7.0"
simple-pid = "^0.2.4"
pyzmq = "^22.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
evolution = "evolution.evolution:main"
printer = "evolution.listener:printer"
